      when needed.
      (Vincent Ladeuil)

    * Unshelve does not generate warnings about progress bars.
      (Aaron Bentley, #328148)

  DOCUMENTATION:

    * Added ``Organizing your workspace`` to the User Guide appendices,
      summarizing some common ways of organizing trees, branches and
      repositories and the processes/workflows implied/enabled by each.
      (Ian Clatworthy)

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

    * ``bzr selftest`` now fails if the bazaar sources contain trailing
      whitespace, non-unix style line endings and files not ending in a
      newline. About 372 files and 3243 lines with trailing whitespace was
      updated to comply with this. The code already complied with the other
      criteria, but now it is enforced. (Marius Kruger)

    * ``Branch.fetch`` and ``Repository.fetch`` now return None rather
      than a count of copied revisions and failed revisions. A while back
      we stopped ever reporting failed revisions because we started
      erroring instead, and the copied revisions count is not used in the
      UI at all - indeed it only reflects the repository status not
      changes to the branch itself. (Robert Collins)

    * MutableTree.commit now favours the "authors" argument, with the old
      "author" argument being deprecated.

    * Remove deprecated EmptyTree.  (Martin Pool)

    * ``Repository.fetch`` now accepts an optional ``fetch_spec``
      parameter.  A ``SearchResult`` or ``MiniSearchResult`` may be passed
      to ``fetch_spec`` instead of a ``last_revision`` to specify exactly
      which revisions to fetch. (Andrew Bennetts)

    * ``RepositoryAcquisitionPolicy.acquire_repository`` now returns a
      tuple of ``(repository, is_new_flag)``, rather than just the
      repository.  (Andrew Bennetts)

    * Revision.get_apparent_author() is now deprecated, replaced by