@@ -135,6 +135,9 @@ IN DEVELOPMENT
       repositories and the processes/workflows implied/enabled by each.
       (Ian Clatworthy)
 
+    * Hooks can now be self documenting. ``bzrlib.hooks.Hooks.create_hook``
+      is the entry point for this feature. (Robert Collins)
+
     * The documentation for ``shelve`` and ``unshelve`` has been clarified.
       (Daniel Watkins, #327421, #327425)
 
